--- a/public/index.html
+++ b/public/index.html
@@ -553,200 +553,215 @@
       });
     });
   </script>
-  <!DOCTYPE html>
-  <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cards with Map</title>
-    <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-    <style>
-      /* Ensure the map container has a height of 200px */
-      .map-container {
-        width: 100%;
-        height: 200px;
-      }
-  
-      /* Cards container with reduced spacing */
-      .cards-container {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 2px !important; /* Reduced gap between cards */
-        justify-content: center;
-        align-items: flex-start;
-        padding: 5px !important; /* Adjusted padding */
-      }
-  
-      /* Card styling */
-      .card {
-        width: 450px;
-        background: white;
-        border-radius: 10px;
-        overflow: hidden;
-        box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-      }
-  
-      /* Responsive layout for smaller screens */
-      @media (max-width: 768px) {
-        .cards-container {
-          flex-direction: column;
-          align-items: center;
-        }
-      }
-  
-      /* Location labels */
-      .location-label {
-        position: absolute;
-        background-color: rgba(0, 0, 0, 0.7);
-        color: white;
-        padding: 5px 10px;
-        font-size: 12px;
-        border-radius: 5px;
-        font-weight: bold;
-      }
-  
-      .start-label {
-        top: 10px;
-        left: 10px;
-      }
-  
-      .end-label {
-        bottom: 10px;
-        right: 10px;
-      }
-  
-      /* Promotional labels */
-      .save-label, .best-seller-label {
-        position: absolute;
-        bottom: 10px;
-        left: 10px;
-        padding: 5px 10px;
-        font-size: 12px;
-        border-radius: 5px;
-        font-weight: bold;
-        z-index: 1000;
-      }
-  
-      .save-label {
-        background-color: #dc3545;
-        color: white;
-      }
-  
-      .best-seller-label {
-        bottom: 30px;
-        background-color: #ffc107;
-        color: white;
-      }
-    </style>
-  </head>
-  <body style="margin: 0; font-family: Arial, sans-serif; background-color: #f4f4f4; display: flex; justify-content: center; align-items: center; min-height: 100vh;">
-  
-    <div class="cards-container">
-      <!-- Card Template -->
-      <script>
-       const cardsData = [
-  { 
-    id: "map1", 
-    title: "Maasai Mara Safari", 
-    duration: "5 days", 
-    tourType: "Wildlife Safari", 
-    location: "Mara Triangle, Kenya", 
-    starts: "Nairobi, Kenya", 
-    ends: "Maasai Mara, Kenya", 
-    priceOld: "KES 160,000 pp", 
-    priceNew: "KES 112,000 pp" 
-  },
-  { 
-    id: "map2", 
-    title: "Serengeti Adventure", 
-    duration: "7 days", 
-    tourType: "Adventure", 
-    location: "Seronera, Tanzania", 
-    starts: "Arusha, Tanzania", 
-    ends: "Serengeti, Tanzania", 
-    priceOld: "KES 180,000 pp", 
-    priceNew: "KES 127,500 pp" 
-  },
-  { 
-    id: "map3", 
-    title: "Gorilla Trekking Uganda", 
-    duration: "6 days", 
-    tourType: "Luxury", 
-    location: "Bwindi Impenetrable Forest, Uganda", 
-    starts: "Kampala, Uganda", 
-    ends: "Bwindi Forest, Uganda", 
-    priceOld: "KES 225,000 pp", 
-    priceNew: "KES 165,000 pp" 
-  },
-  { 
-    id: "map4", 
-    title: "Zanzibar Beach Escape", 
-    duration: "4 days", 
-    tourType: "Beach Holiday", 
-    location: "Nungwi Beach, Zanzibar", 
-    starts: "Stone Town, Zanzibar", 
-    ends: "Nungwi Beach, Zanzibar", 
-    priceOld: "KES 135,000 pp", 
-    priceNew: "KES 105,000 pp" 
-  }
-];
 
-      </script>
-  
-      <!-- JavaScript to generate cards dynamically -->
-      <script>
-        document.addEventListener("DOMContentLoaded", function() {
-          const container = document.querySelector(".cards-container");
-  
-          cardsData.forEach(card => {
-            const cardElement = document.createElement("div");
-            cardElement.classList.add("card");
-            cardElement.innerHTML = `
-              <div style="position: relative;">
-                <span class="location-label start-label">Start: Reykjavik</span>
-                <span class="location-label end-label">End: Reykjavik</span>
-                <div id="${card.id}" class="map-container"></div>
-                <span class="best-seller-label">Best Seller</span>
-                <span class="save-label">Save 30%</span>
-              </div>
-              <div style="padding: 10px;">
-                <h3 style="font-size: 18px; font-weight: bold; color: #333; margin-bottom: 10px;">${card.title}</h3>
-                <ul style="list-style: none; padding: 0; margin: 0; font-size: 14px; color: #666;">
-                  <li style="margin-bottom: 5px;"><strong>Duration:</strong> ${card.duration}</li>
-                  <li style="margin-bottom: 5px;"><strong>Tour Type:</strong> ${card.tourType}</li>
-                  <li style="margin-bottom: 5px;"><strong>Starts:</strong> Reykjavik</li>
-                  <li style="margin-bottom: 5px;"><strong>Ends:</strong> Reykjavik</li>
-                  <li style="margin-bottom: 5px;"><strong>Max Group Size:</strong> 40</li>
-                </ul>
-                <div style="margin-top: 15px; display: flex; justify-content: space-between; align-items: center;">
-                  <span style="text-decoration: line-through; color: #999;">${card.priceOld}</span>
-                  <span style="color: #dc3545; font-weight: bold;">${card.priceNew}</span>
-                </div>
-              </div>
-            `;
-            container.appendChild(cardElement);
-          });
-  
-          // Initialize maps for all cards
-          cardsData.forEach(card => initializeMap(card.id));
-        });
-      </script>
-    </div>
-  
-    <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
-    <script>
-      function initializeMap(mapId) {
-        const map = L.map(mapId).setView([64.1355, -21.8954], 10);
-        L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
-        L.marker([64.1355, -21.8954]).addTo(map).bindPopup('Start: Reykjavik').openPopup();
+
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Cards with Map</title>
+  <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+  <style>
+    /* Ensure the map container has a height of 200px */
+    .map-container {
+      width: 100%;
+      height: 200px;
+    }
+
+    /* Cards container with reduced spacing */
+    .cards-container {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 2px !important; /* Reduced gap between cards */
+      justify-content: center;
+      align-items: flex-start;
+      padding: 5px !important; /* Adjusted padding */
+    }
+
+    /* Card styling */
+    .card {
+      width: 450px;
+      background: white;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    /* Responsive layout for smaller screens */
+    @media (max-width: 768px) {
+      .cards-container {
+        flex-direction: column;
+        align-items: center;
       }
+    }
+
+    /* Location labels */
+    .location-label {
+      position: absolute;
+      background-color: rgba(0, 0, 0, 0.7);
+      color: white;
+      padding: 5px 10px;
+      font-size: 12px;
+      border-radius: 5px;
+      font-weight: bold;
+    }
+
+    .start-label {
+      top: 10px;
+      left: 10px;
+    }
+
+    .end-label {
+      bottom: 10px;
+      right: 10px;
+    }
+
+    /* Promotional labels */
+    .save-label, .best-seller-label {
+      position: absolute;
+      bottom: 10px;
+      left: 10px;
+      padding: 5px 10px;
+      font-size: 12px;
+      border-radius: 5px;
+      font-weight: bold;
+      z-index: 1000;
+    }
+
+    .save-label {
+      background-color: #dc3545;
+      color: white;
+    }
+
+    .best-seller-label {
+      bottom: 30px;
+      background-color: #ffc107;
+      color: white;
+    }
+  </style>
+</head>
+<body style="margin: 0; font-family: Arial, sans-serif; background-color: #f4f4f4; display: flex; justify-content: center; align-items: center; min-height: 100vh;">
+
+  <div class="cards-container">
+    <!-- Card Template -->
+    <script>
+      const cardsData = [
+        { 
+          id: "map1", 
+          title: "Maasai Mara Safari", 
+          duration: "5 days", 
+          tourType: "Wildlife Safari", 
+          location: "Mara Triangle, Kenya", 
+          starts: "Nairobi, Kenya", 
+          ends: "Maasai Mara, Kenya", 
+          priceOld: "KES 160,000 pp", 
+          priceNew: "KES 112,000 pp",
+          startCoords: [-1.2921, 36.8219], // Nairobi coordinates
+          endCoords: [-1.5506, 35.0850] // Maasai Mara coordinates
+        },
+        { 
+          id: "map2", 
+          title: "Serengeti Adventure", 
+          duration: "7 days", 
+          tourType: "Adventure", 
+          location: "Seronera, Tanzania", 
+          starts: "Arusha, Tanzania", 
+          ends: "Serengeti, Tanzania", 
+          priceOld: "KES 180,000 pp", 
+          priceNew: "KES 127,500 pp",
+          startCoords: [-3.3869, 36.6872], // Arusha coordinates
+          endCoords: [-2.3333, 34.8333] // Serengeti coordinates
+        },
+        { 
+          id: "map3", 
+          title: "Gorilla Trekking Uganda", 
+          duration: "6 days", 
+          tourType: "Luxury", 
+          location: "Bwindi Impenetrable Forest, Uganda", 
+          starts: "Kampala, Uganda", 
+          ends: "Bwindi Forest, Uganda", 
+          priceOld: "KES 225,000 pp", 
+          priceNew: "KES 165,000 pp",
+          startCoords: [0.3136, 32.5810], // Kampala coordinates
+          endCoords: [-1.0670, 29.7481] // Bwindi coordinates
+        },
+        { 
+          id: "map4", 
+          title: "Zanzibar Beach Escape", 
+          duration: "4 days", 
+          tourType: "Beach Holiday", 
+          location: "Nungwi Beach, Zanzibar", 
+          starts: "Stone Town, Zanzibar", 
+          ends: "Nungwi Beach, Zanzibar", 
+          priceOld: "KES 135,000 pp", 
+          priceNew: "KES 105,000 pp",
+          startCoords: [-6.1659, 39.2026], // Stone Town coordinates
+          endCoords: [-5.7082, 39.2760] // Nungwi Beach coordinates
+        }
+      ];
     </script>
-  
-  </body>
-  </html>
-  
-  
-  
+
+    <!-- JavaScript to generate cards dynamically -->
+    <script>
+      document.addEventListener("DOMContentLoaded", function() {
+        const container = document.querySelector(".cards-container");
+
+        cardsData.forEach(card => {
+          const cardElement = document.createElement("div");
+          cardElement.classList.add("card");
+          cardElement.innerHTML = `
+            <div style="position: relative;">
+              <span class="location-label start-label">Start: ${card.starts}</span>
+              <span class="location-label end-label">End: ${card.ends}</span>
+              <div id="${card.id}" class="map-container"></div>
+              <span class="best-seller-label">Best Seller</span>
+              <span class="save-label">Save 30%</span>
+            </div>
+            <div style="padding: 10px;">
+              <h3 style="font-size: 18px; font-weight: bold; color: #333; margin-bottom: 10px;">${card.title}</h3>
+              <ul style="list-style: none; padding: 0; margin: 0; font-size: 14px; color: #666;">
+                <li style="margin-bottom: 5px;"><strong>Duration:</strong> ${card.duration}</li>
+                <li style="margin-bottom: 5px;"><strong>Tour Type:</strong> ${card.tourType}</li>
+                <li style="margin-bottom: 5px;"><strong>Starts:</strong> ${card.starts}</li>
+                <li style="margin-bottom: 5px;"><strong>Ends:</strong> ${card.ends}</li>
+                <li style="margin-bottom: 5px;"><strong>Max Group Size:</strong> 40</li>
+              </ul>
+              <div style="margin-top: 15px; display: flex; justify-content: space-between; align-items: center;">
+                <span style="text-decoration: line-through; color: #999;">${card.priceOld}</span>
+                <span style="color: #dc3545; font-weight: bold;">${card.priceNew}</span>
+              </div>
+            </div>
+          `;
+          container.appendChild(cardElement);
+        });
+
+        // Initialize maps for all cards
+        cardsData.forEach(card => initializeMap(card.id, card.startCoords, card.endCoords));
+      });
+    </script>
+  </div>
+
+  <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+  <script>
+    function initializeMap(mapId, startCoords, endCoords) {
+      const map = L.map(mapId).setView(startCoords, 6);
+      L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+
+      // Add start marker
+      L.marker(startCoords).addTo(map).bindPopup('Start: ' + startCoords).openPopup();
+
+      // Add end marker
+      L.marker(endCoords).addTo(map).bindPopup('End: ' + endCoords).openPopup();
+      
+      // Optionally, draw a line between start and end
+      L.polyline([startCoords, endCoords], { color: 'blue' }).addTo(map);
+    }
+  </script>
+
+</body>
+</html>
+
 
   <!DOCTYPE html>
 <html lang="en">
